--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -63,6 +63,11 @@
       margin: 0;
     }
 
+    img {
+      min-width: 3rem;
+      max-width: 3rem;
+    }
+
     a {
       text-decoration: none;
       color: inherit;
@@ -87,6 +92,8 @@
 
       img {
         margin-bottom: 0.5rem; // 아이콘과 h1 사이 간격 조절
+        min-width: 3rem;
+        max-width: 3rem;
       }
     }
   }
