💄 [FE] style: header 수정 완료, 로그인 진행중

--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -100,10 +100,8 @@
 }
 
 .home_PC img {
-  // content: url("/home_yellow.svg"); // 기본 이미지
-
   @media (min-width: 1024px) {
-    content: url("/emotion1-folded.svg"); // 1024px 이상일 때 이미지 변경
+    content: url("/emotion1-folded.svg");
   }
 }
 
@@ -111,7 +109,7 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-  top: 0;
+  top: 1rem;
   left: 0;
   z-index: 999;
   width: 100vw;
