--- a/components/list/emotion-item.scss
+++ b/components/list/emotion-item.scss
@@ -6,12 +6,19 @@
   padding: 3rem;
   text-align: center;
   color: var(--color-gray-50);
+  width: 70%;
 
   &div {
     margin-top: 1rem;
   }
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .emotion-card {
+    width: 100%;
   }
 }
 
