--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -10,6 +10,7 @@
     box-shadow: 0 0.2rem rgba(228, 228, 228, 0.5);
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(0.5rem);
+    min-width: 45rem;
 
     & > div {
       min-width: 5rem;
@@ -121,17 +122,6 @@
         height: 4.5rem;
       }
     }
-  }
-
-  .header_MO {
-    // display: flex;
-    // justify-content: space-between;
-    // top: 1rem;
-    // left: 0;
-    // z-index: 999;
-    // width: 100vw;
-    // /* background: red; */
-    // padding: calc(var(--layout-padding) / 2) var(--layout-padding);
   }
 
   .home_MO,
