--- a/app/(user)/signup/signup.scss
+++ b/app/(user)/signup/signup.scss
@@ -4,50 +4,46 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-width: 45rem;
   background-color: #f0f2f5;
-  padding: 20px;
+  padding: 2rem;
   box-sizing: border-box;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 
   h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    color: #333;
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
   }
 
   .signup-form {
     background: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 3rem;
+    border-radius: 1rem;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 400px;
+    max-width: 40rem;
+    min-width: 40rem;
     box-sizing: border-box;
 
     .form-group {
-      margin-bottom: 20px;
-
-      input {
-        width: 100%;
-        padding: 10px;
-        font-size: 1em;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-sizing: border-box;
-      }
+      margin-bottom: 1rem;
 
       .error-message {
         color: #ff4d4f;
         font-size: 0.875em;
-        margin-top: 5px;
+        margin-top: 0.5rem;
       }
     }
 
     .submit-button {
       width: 18.8em;
-      padding: 1em;
-      font-size: 1em;
+      padding: 1rem;
+      font-size: 1.5rem;
       border: none;
-      border-radius: 5px;
+      border-radius: 0.5rem;
       background-color: #333;
       color: #fff;
       cursor: pointer;
@@ -61,7 +57,16 @@
 }
 
 @media (min-width: 1024px) {
-  .signup-form .submit-button {
-    width: 10em;
+  .signup-container {
+    width: calc(100% + 10rem);
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 1023px) {
+  .containerLayout {
+    padding: unset;
   }
 }
