--- a/styles/reset.css
+++ b/styles/reset.css
@@ -137,16 +137,18 @@ button,
 input[type="text"],
 input[type="date"],
 input[type="month"],
+input[type="password"],
 textarea {
   all: unset;
 }
-
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   height: 4rem;
   text-indent: 1rem;
 }
 
 input[type="text"],
+input[type="password"],
 textarea {
   width: 100%;
   border-radius: 1.2rem;
@@ -155,12 +157,14 @@ textarea {
 }
 
 input[type="text"]::placeholder,
+input[type="password"]::placeholder,
 textarea::placeholder {
   color: var(--color-gray-50);
   font-family: unset;
 }
 
 input[type="text"]:focus,
+input[type="password"]:focus,
 textarea:focus {
   border-color: var(--color-gray-70);
 }
